# Minimal-SWE-Agent

./: .env.example  .gitignore  2026ai-agent.md  README.md  pyproject.toml  run.sh
src/swe_agent/: __main__.py  config.py
src/swe_agent/agent/: factory.py  graph.py  nodes.py  registry.py  state.py
src/swe_agent/cli/: __init__.py  display.py  loop.py  main.py  runner.py
src/swe_agent/configs/: SYSTEM_PROMPT.md  config-example.yaml  mcp-example.json
src/swe_agent/configs/skills/example-skill/: SKILL.md
src/swe_agent/core/: memory_manager.py  tool.py
src/swe_agent/tools/: base.py  bash_tool.py  file_tools.py  mcp_loader.py  search_glob.py  search_grep.py  security.py  skill_loader.py  skill_tool.py
