[project]
name = "minimal-swe-agent"
version = "0.1.0"
description = "A minimal SWE agent with LangGraph + agno multi-agent orchestration"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.4",
    "langchain-core>=0.3",
    "agno>=1.2",
    "litellm>=1.60",
    "fastembed>=0.5",
    "mem0ai>=2.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "tiktoken>=0.9",
    "prompt-toolkit>=3.0",
    "mcp>=1.0",
]

[project.scripts]
swe-agent = "swe_agent.__main__:main"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]
